@@ -26,6 +26,7 @@ version 0.99.5-beta2 XX-Ago-2010
  . [FIX] Director: Works with Fast FPS disabled (issue #954)
  . [FIX] Director: it's possible to set a custom projection before setting the openGL view (issue #952)
  . [FIX] Label: BitmapFontAtlas supports empty strings (issue #950)
+ . [FIX] Label: LabelAtlas doesn't crash if the texture file can't be found (issue #965)
  . [FIX] Layer: ivars isTouchEnabled / isAccelerometerEnabled have the '_' suffix in their names
  . [FIX] Menu: Disabled possible menuItem on onExit (issue #969)
  . [FIX] Sprite: little optimization when using BatchNode + children
